# qumater

./: LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
qumater/: __init__.py  cli.py
qumater/core/: __init__.py  config.py  objectives.py
qumater/materials/: __init__.py  datasets.py  lattice.py
qumater/platform/: __init__.py  applications.py  control.py  eda.py  ibm_quantum.py  machine_learning.py  measurement.py  platform.py  programming.py  tasks.py
qumater/qsim/: __init__.py  algorithms.py  ansatz.py  circuit_optimization.py  hamiltonian.py  hybrid.py  modules.py
qumater/workflows/: __init__.py  innovation.py  pipeline.py
reports/: extended_algorithm_module_tests.md  project_tasks.md  readme_examples_output.md  readme_examples_output.txt
tests/: test_algorithm_modules.py  test_ansatz.py  test_cli.py  test_core_objectives.py  test_hamiltonian.py  test_hybrid_workflows.py  test_ibm_quantum_platform.py  test_innovation_insight.py  test_materials.py  test_platform.py  test_vqe.py  test_well_known_algorithms.py  test_workflow_pipeline.py
